--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,29 +38,40 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/b1" />
+                android:text="@string/b1"
+                app:cornerRadius="8sp"
+                android:layout_marginHorizontal="10sp"/>
 
             <Button
                 android:id="@+id/button2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/b2" />
+                android:text="@string/b2"
+                app:cornerRadius="8sp"
+                android:layout_marginHorizontal="10sp"/>
 
             <Button
                 android:id="@+id/button3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/b3" />
+                android:text="@string/b3"
+                app:cornerRadius="8sp"
+                android:layout_marginHorizontal="10sp"/>
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="34sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginTop="30sp">
+            android:orientation="vertical">
 
             <EditText
                 android:id="@+id/editTextNumber"
