--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/button1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -63,9 +63,10 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/Result"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:textSize="34sp" />
 
         <LinearLayout
@@ -74,7 +75,7 @@
             android:orientation="vertical">
 
             <EditText
-                android:id="@+id/editTextNumber"
+                android:id="@+id/A"
                 android:layout_width="match_parent"
                 android:layout_height="60sp"
                 android:ems="10"
@@ -83,7 +84,7 @@
                 android:layout_marginHorizontal="50sp"/>
 
             <EditText
-                android:id="@+id/editTextNumber2"
+                android:id="@+id/B"
                 android:layout_width="match_parent"
                 android:layout_height="60sp"
                 android:ems="10"
@@ -92,13 +93,13 @@
                 android:layout_marginHorizontal="50sp"/>
 
             <EditText
-                android:id="@+id/editTextNumber3"
+                android:id="@+id/C"
                 android:layout_width="match_parent"
                 android:layout_height="60sp"
+                android:layout_marginHorizontal="50sp"
                 android:ems="10"
-                android:hint="X"
-                android:inputType="number"
-                android:layout_marginHorizontal="50sp"/>
+                android:hint="C"
+                android:inputType="number" />
 
         </LinearLayout>
 
