--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,10 +22,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="57dp"
                 android:layout_weight="1"
+                android:background="#00BCD4"
                 android:text="@string/quiz2"
                 android:textAlignment="center"
                 android:textSize="34sp"
-                android:visibility="visible" />
+                android:visibility="visible"/>
         </LinearLayout>
 
         <LinearLayout
